# win11-dejunker

./: Cargo.toml  LICENSE  LICENSE.txt  README.md  db.yaml
src/: main.rs  registry.rs  utils.rs
src/files/: db.rs  settings.rs
src/types/: mod.rs  onoff.rs
