[package]
name = "dejunker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
yaml-rust2 = "0.8"
log = "0.4"
env_logger = "0.11"
twiddle = "1.1"
reqwest = { version = "0.12", features= ["blocking"] }


[dependencies.windows]
version = "0.58.0"
features = [ "Win32_Foundation", "Win32_System_Threading", "Win32_System_Registry", "Win32_Security" ]

